# chapchom

./: .gitignore  .travis.yml  .travis.yml_backup  CMakeLists.txt  README.md  autogen.sh  make_clean_distro.sh  make_doc.sh  todo.org
demos/argparse/: CMakeLists.txt  demo_argparse.cpp
demos/interpolation/basic_interpolation/: CMakeLists.txt  demo_basic_interpolation.cpp
demos/linear_solvers/basic_armadillo_solver/: CMakeLists.txt  demo_armadillo_linear_solver.cpp
demos/odes/: CMakeLists.txt
external_src/numerical_recipes/: CMakeLists.txt  nrtypes_lib.h  nrtypes_nr.h  nrutil_mtl.h  nrutil_nr.h  nrutil_tnt.h  nrutil_val.h
src/: CMakeLists.txt
src/General/: HCommon_includes.h
src/LinearSolver/: CALinearSolver.cpp  CALinearSolver.h  CCLUSolverNumericalRecipes.cpp  CCLUSolverNumericalRecipes.h
src/Matrix/: CAMatrix.cpp  CAMatrix.h  CCMatrix.cpp  CCMatrix.h
src/data/: CMakeLists.txt  cc_data.h  cc_data.tpl.cpp  cc_data.tpl.h
src/data_structures/: CMakeLists.txt  ac_odes.cpp  ac_odes.h  cc_boundary_node.cpp  cc_boundary_node.h  cc_boundary_node.tpl.cpp  cc_boundary_node.tpl.h  cc_data.cpp  cc_data.h  cc_data.tpl.cpp  cc_data.tpl.h  cc_node.cpp  cc_node.h  cc_node.tpl.cpp  cc_node.tpl.h
src/equations/: CMakeLists.txt  ac_jacobian_and_residual.cpp  ac_jacobian_and_residual.h  ac_jacobian_and_residual.tpl.cpp  ac_jacobian_and_residual.tpl.h
src/general/: CMakeLists.txt  cmake_definitions.h.in  common_includes.h  definitions.h  initialise.cpp  initialise.h  utilities.cc  utilities.cpp  utilities.h
src/integration/: CMakeLists.txt  ac_explicit_integration_method.cpp  ac_explicit_integration_method.h  ac_factory_integration_method.cpp  ac_factory_integration_method.h  ac_integration_method.cpp  ac_integration_method.h  ca_explicit_integration_method.cpp  ca_explicit_integration_method.h  ca_integration_method.cpp  ca_integration_method.h  cc_RK4_method.cpp  cc_RK4_method.h  cc_euler_method.cpp  cc_euler_method.h  cc_factory_integration_method.cc  cc_factory_integration_method.cpp  cc_factory_integration_method.h
src/interpolation/: CMakeLists.txt  ac_interpolator.cpp  ac_interpolator.h  ca_interpolator.cpp  ca_interpolator.h  cc_newton_interpolator.cpp  cc_newton_interpolator.h
src/interpolators/: ca_interpolator.cpp  ca_interpolator.h  cc_newton_interpolator.cpp  cc_newton_interpolator.h
src/linear_solvers/: CMakeLists.txt  ac_linear_solver.cpp  ac_linear_solver.h  ac_linear_solver.tpl.cpp  ac_linear_solver.tpl.h  ca_linear_solver.cpp  ca_linear_solver.h  cc_factory_linear_solver.cpp  cc_factory_linear_solver.h  cc_factory_linear_solver.tpl.cpp  cc_factory_linear_solver.tpl.h  cc_lu_solver_numerical_recipes.cpp  cc_lu_solver_numerical_recipes.h  cc_lu_solver_numerical_recipes.tpl.cpp  cc_lu_solver_numerical_recipes.tpl.h  cc_solver_armadillo.cpp  cc_solver_armadillo.h  cc_solver_armadillo.tpl.cpp  cc_solver_armadillo.tpl.h  cc_solver_armadilo.tpl.cpp  cc_solver_armadilo.tpl.h
src/matrices/: CMakeLists.txt  ac_matrix.cpp  ac_matrix.h  ac_matrix.tpl.cpp  ac_matrix.tpl.h  ac_vector.h  ac_vector.tpl.cpp  ac_vector.tpl.h  cc_factory_matrices.h  cc_factory_matrices.tpl.cpp  cc_factory_matrices.tpl.h  cc_matrix.cpp  cc_matrix.h  cc_matrix.tpl.cpp  cc_matrix.tpl.h  cc_matrix_armadillo.h  cc_matrix_armadillo.tpl.cpp  cc_matrix_armadillo.tpl.h  cc_vector.h  cc_vector.tpl.cpp  cc_vector.tpl.h  cc_vector_armadillo.h  cc_vector_armadillo.tpl.cpp  cc_vector_armadillo.tpl.h
src/newtons_method/: cc_newtons_method.tpl.cpp
src/nodes/: CMakeLists.txt  ac_node.tpl.h  cc_node.h  cc_node.tpl.h
src/odes/: CMakeLists.txt  ac_odes.cpp  ac_odes.h  ca_explicit_method.cpp  ca_explicit_method.h  ca_odes.cpp  ca_odes.h  cc_euler_method.cpp  cc_euler_method.h
src/problem/: CMakeLists.txt  ac_interpolator.cpp  ac_interpolator.h  ac_ivp_for_odes.cpp  ac_ivp_for_odes.h  ac_jacobian.h  ac_jacobian.tpl.cpp  ac_jacobian.tpl.h  ac_jacobian_and_residual.h  ac_jacobian_and_residual.tpl.h  ac_mesh_free_problem.cpp  ac_mesh_free_problem.h  ac_mesh_free_problem.tpl.cpp  ac_mesh_free_problem.tpl.h  ac_problem.cpp  ac_problem.h  ac_residual.h  ac_residual.tpl.cpp  ac_residual.tpl.h  cc_jacobian_by_fd_and_residual_from_odes.tpl.h  cc_jacobian_by_fd_from_odes.tpl.cpp  cc_jacobian_by_fd_from_odes.tpl.h  cc_jacobian_by_fd_from_odes_with_shampine_h_computation.tpl.h  cc_newton_interpolator.cpp  cc_newton_interpolator.h  cc_newtons_method.cpp  cc_newtons_method.h  cc_newtons_method.tpl.cpp  cc_newtons_method.tpl.h
src/time_steppers/: CMakeLists.txt  ac_adaptive_new_step_size_strategy.cpp  ac_adaptive_new_step_size_strategy.h  ac_adaptive_time_stepper.cpp  ac_adaptive_time_stepper.h  ac_jacobian_and_residual_for_implicit_time_stepper.cpp  ac_jacobian_and_residual_for_implicit_time_stepper.h  ac_jacobian_and_residual_for_implicit_time_stepper.tpl.cpp  ac_jacobian_and_residual_for_implicit_time_stepper.tpl.h  ac_newtons_method_for_implicit_time_stepper.cpp  ac_newtons_method_for_implicit_time_stepper.h  ac_newtons_method_for_implicit_time_stepper.tpl.cpp  ac_newtons_method_for_implicit_time_stepper.tpl.h  ac_predictor_corrector_time_stepper.cpp  ac_predictor_corrector_time_stepper.h  ac_time_stepper.cpp  ac_time_stepper.h  cc_RK4_method.cpp  cc_RK4_method.h  cc_adams_moulton_2_method.cpp  cc_adams_moulton_2_method.h  cc_adams_moulton_2_method.tpl.cpp  cc_adams_moulton_2_method.tpl.h  cc_adams_moulton_2_predictor_corrector_method.cpp  cc_adams_moulton_2_predictor_corrector_method.h  cc_adaptive_new_step_size_half_double.cpp  cc_adaptive_new_step_size_half_double.h  cc_adaptive_runge_kutta_45DP_method.cpp  cc_adaptive_runge_kutta_45DP_method.h  cc_adaptive_runge_kutta_45F_method.cpp  cc_adaptive_runge_kutta_45F_method.h  cc_backward_euler_method.cpp  cc_backward_euler_method.h  cc_backward_euler_method.tpl.cpp  cc_backward_euler_method.tpl.h  cc_backward_euler_predictor_corrector_method.cpp  cc_backward_euler_predictor_corrector_method.h  cc_bdf_2_method.cpp  cc_bdf_2_method.h  cc_bdf_2_method.tpl.cpp  (+40 more)
src/vtk/: CMakeLists.txt  cc_chapchom2vtk.cpp  cc_chapchom2vtk.h  cc_scicellxx2vtk.cpp  cc_scicellxx2vtk.h
(+418 files in other folders)
