# Add directories with source files (in order of dependence, the ones
# with no dependency first then the others)
ADD_SUBDIRECTORY(general)
ADD_SUBDIRECTORY(data_structures)
ADD_SUBDIRECTORY(matrices)
IF (CHAPCHOM_USES_VTK)
   ADD_SUBDIRECTORY(vtk)
ENDIF (CHAPCHOM_USES_VTK)
ADD_SUBDIRECTORY(linear_solvers)
ADD_SUBDIRECTORY(equations)
ADD_SUBDIRECTORY(time_steppers)
ADD_SUBDIRECTORY(problem)
