# Add directories with demo/test cases
ADD_SUBDIRECTORY(basic_ode)
ADD_SUBDIRECTORY(basic_ode_stability_analysis)
ADD_SUBDIRECTORY(adaptive_time_stepper)
ADD_SUBDIRECTORY(lotka_volterra)
ADD_SUBDIRECTORY(chen)
IF (CHAPCHOM_USES_VTK)
   ADD_SUBDIRECTORY(3body_problem)
   ADD_SUBDIRECTORY(4body_problem)
ENDIF (CHAPCHOM_USES_VTK)
